ir ari tabi, ir tabulu atlase

--- a/app/assets/stylesheets/tables.css.scss
+++ b/app/assets/stylesheets/tables.css.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the DbConnections controller here.
+// Place all the styles related to the Tables controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-ul.unstyled.left-2em {
-  margin-left:2em;
-}
