--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -27,3 +27,14 @@ body { padding-top: 60px; }
 //
 // Example:
 // @linkColor: #ff0000;
+
+.tab-content {
+  border-left:1px solid @tableBorder;
+  border-right:1px solid @tableBorder;
+  border-bottom:1px solid @tableBorder;
+  padding: 18px;
+  .border-radius(5px);
+  border-top-left-radius:0;
+  border-top-right-radius:0;
+  margin-top:-18px;
+}
