--- a/app/views/dashboard/home.html.haml
+++ b/app/views/dashboard/home.html.haml
@@ -1,8 +1,7 @@
 .span2.vls
   %script{:type => 'text/x-handlebars'}
     {{view Esql.ConnectionsIndexView}}
-%script
-  $('.vls .accordion').collapsible()
-.span10
-  =yield
-  
+
+.span10  
+  %script{:type => 'text/x-handlebars'}
+    {{view Esql.DashboardsIndexView}}
